chore: update project title in index.html
Updated the `<title>` tag in `index.html` from "YOL-PROJECT" to "Benicio Advogados" to reflect the new project branding. No functional changes.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Vitamin" name="description"/>
     <meta content="#BD34FE" name="theme-color"/>
-    <title>YOL-PROJECT</title>
+    <title>Benicio Advogados</title>
     <style>
         @font-face {
             font-family: Inter;
