chore(index.html): update font preloading strategy
Replaced custom font configuration for `Inter` with Google Fonts integration for `Montserrat` and `Work Sans`. This improves readability and simplifies font loading from an external source. No functional changes.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
         lang="en"
 >
 <head>
-    <link
-            as="font"
-            crossorigin
-            href="/Inter.woff2"
-            rel="preload"
-            type="font/woff2"
-    />
-
     <meta charset="UTF-8"/>
     <link href="/favicon.png" rel="icon" type="image/png"/>
     <link href="/apple-touch-icon.png" rel="apple-touch-icon"/>
@@ -20,15 +12,9 @@
     <meta content="Vitamin" name="description"/>
     <meta content="#BD34FE" name="theme-color"/>
     <title>Benicio Advogados</title>
-    <style>
-        @font-face {
-            font-family: Inter;
-            font-style: normal;
-            font-weight: 100 900;
-            font-display: swap;
-            src: url('/Inter.woff2') format('woff2');
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
