--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 <head>
     <meta charset="UTF-8"/>
     <link href="/favicon.png" rel="icon" type="image/png"/>
-    <link href="/apple-touch-icon.png" rel="apple-touch-icon"/>
     <link href="/manifest.webmanifest" rel="manifest"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Vitamin" name="description"/>
@@ -19,6 +18,6 @@
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-<script src="/src/main.tsx" type="module"></script>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
