--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 >
 <head>
     <meta charset="UTF-8"/>
-    <link href="./favicon.png" rel="icon" type="image/png"/>
-    <link href="./manifest.webmanifest" rel="manifest"/>
+    <link href="/favicon.png" rel="icon" type="image/png"/>
+    <link href="/manifest.webmanifest" rel="manifest"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Vitamin" name="description"/>
     <meta content="#BD34FE" name="theme-color"/>
