refactor(icons): update SVG formatting for readability
Reformatted multiple SVG files, including `folders.svg`, `overview.svg`, and `logo-yol.svg`, to improve code readability and maintainability. Simplified indentation and attributes for better structure adherence. No visual changes applied.

--- a/public/404.html
+++ b/public/404.html
@@ -6,7 +6,7 @@
     <script>
         sessionStorage.redirect = location.href;
     </script>
-    <meta http-equiv="refresh" content="0;URL='/yol-project/'">
+    <meta content="0;URL='/yol-project/'" http-equiv="refresh">
 </head>
 <body>
 </body>
