--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <meta content="Vitamin" name="description"/>
     <meta content="#BD34FE" name="theme-color"/>
     <title>Benicio Advogados</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com" rel="preconnect">
+    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&family=Work+Sans:wght@600&display=swap"
+          rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-<script type="module" src="/src/main.tsx"></script>
+<script src="/src/main.tsx" type="module"></script>
 </body>
 </html>
