fix(index): update meta description for SEO
Revised the `<meta name="description">` content to provide a clear and detailed summary of the YOL-PROJECT, improving search engine optimization and user understanding.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="/favicon.png" rel="icon" type="image/png"/>
     <link href="/manifest.webmanifest" rel="manifest"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="Vitamin" name="description"/>
+    <meta content="YOL-PROJECT is a web application for Benício Advogados, designed to provide a modern and efficient platform for legal services management." name="description"/>
     <meta content="#BD34FE" name="theme-color"/>
     <title>Benicio Advogados</title>
     <link href="https://fonts.googleapis.com" rel="preconnect">
