style(index.html): update theme-color meta tag
Changed the meta tag `theme-color` value from `#BD34FE` to `#F97316` for better alignment with the application’s branding. No functional changes.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="YOL-PROJECT is a web application for Benício Advogados, designed to provide a modern and efficient platform for legal services management."
           name="description"/>
-    <meta content="#BD34FE" name="theme-color"/>
+    <meta content="#f97316" name="theme-color"/>
     <title>Benicio Advogados</title>
     <link href="https://fonts.googleapis.com" rel="preconnect">
     <link crossorigin href="https://fonts.gstatic.com" rel="preconnect">
