--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 >
 <head>
     <meta charset="UTF-8"/>
-    <link href="/favicon.png" rel="icon" type="image/png"/>
-    <link href="/manifest.webmanifest" rel="manifest"/>
+    <link href="./public/favicon.png" rel="icon" type="image/png"/>
+    <link href="./public/manifest.webmanifest" rel="manifest"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="YOL-PROJECT is a web application for Benício Advogados, designed to provide a modern and efficient platform for legal services management."
           name="description"/>
@@ -20,6 +20,6 @@
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-<script src="/src/main.tsx" type="module"></script>
+<script src="./src/main.tsx" type="module"></script>
 </body>
 </html>
