--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 >
 <head>
     <meta charset="UTF-8"/>
-    <link href="./public/favicon.png" rel="icon" type="image/png"/>
-    <link href="./public/manifest.webmanifest" rel="manifest"/>
+    <link href="./favicon.png" rel="icon" type="image/png"/>
+    <link href="./manifest.webmanifest" rel="manifest"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="YOL-PROJECT is a web application for Benício Advogados, designed to provide a modern and efficient platform for legal services management."
           name="description"/>
